--- a/Web.config
+++ b/Web.config
@@ -11,7 +11,7 @@
   <!-- -->
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <!--<httpRuntime targetFramework="4.8" />-->
   </system.web>
   <system.codedom>
     <compilers>
