Display and CbtoPost 剩下調整ajax動態讀取跟 Placeholder Visilbe顯示問題

--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -175,6 +175,7 @@
     </Compile>
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Helpers\Logger.cs" />
+    <Compile Include="Helpers\SessionHelper.cs" />
     <Compile Include="HomePage.aspx.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
