--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Models\MemberScan.cs" />
     <Compile Include="Models\Pboard.cs" />
     <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\PostHashtag.cs" />
     <Compile Include="Models\PostImgList.cs" />
     <Compile Include="Models\PostStamp.cs" />
     <Compile Include="Models\SearchResult.cs" />
