--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -102,6 +102,7 @@
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\CboardsPage.css" />
+    <Content Include="css\CreatePost.css" />
     <Content Include="css\Display.css" />
     <Content Include="css\index.css" />
     <Content Include="css\PboardtoCboard.css" />
