--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -184,6 +184,7 @@
     </Compile>
     <Compile Include="Helpers\ConfigHelper.cs" />
     <Compile Include="Helpers\Logger.cs" />
+    <Compile Include="Helpers\LoginHelper.cs" />
     <Compile Include="Helpers\SessionHelper.cs" />
     <Compile Include="HomePage.aspx.cs">
       <DependentUpon>HomePage.aspx</DependentUpon>
