--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,7 @@
   <!-- -->
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
+	  <authentication mode="Forms"></authentication>
     <!--<httpRuntime targetFramework="4.8" />-->
   </system.web>
   <system.codedom>
