--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -104,6 +104,7 @@
     <Content Include="css\CboardsPage.css" />
     <Content Include="css\CreatePost.css" />
     <Content Include="css\Display.css" />
+    <Content Include="css\EditPost.css" />
     <Content Include="css\index.css" />
     <Content Include="css\PboardtoCboard.css" />
     <Content Include="css\pen.png" />
@@ -115,6 +116,7 @@
     <Content Include="Index.aspx" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
+    <Content Include="js\showdown.js" />
     <Content Include="Login.aspx" />
     <Content Include="MemberFollowList.aspx" />
     <Content Include="MemberList.aspx" />
@@ -122,6 +124,8 @@
     <Content Include="PboardtoCboard.aspx" />
     <Content Include="Ranking.aspx" />
     <Content Include="Register.aspx" />
+    <Content Include="Scripts\showdown.js" />
+    <Content Include="Scripts\showdown.min.js" />
     <Content Include="SearchPage.aspx" />
     <Content Include="ShareControls\Mugen.ascx" />
     <Content Include="Web.config" />
