--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -105,6 +105,8 @@
     <Content Include="css\CreatePost.css" />
     <Content Include="css\Display.css" />
     <Content Include="css\EditPost.css" />
+    <Content Include="css\github-markdown-dark.css" />
+    <Content Include="css\github-markdown.css" />
     <Content Include="css\index.css" />
     <Content Include="css\PboardtoCboard.css" />
     <Content Include="css\pen.png" />
@@ -116,6 +118,7 @@
     <Content Include="Index.aspx" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
+    <Content Include="js\jquery.min.js" />
     <Content Include="js\showdown.js" />
     <Content Include="Login.aspx" />
     <Content Include="MemberFollowList.aspx" />
