--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -68,9 +68,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BackAdmin\MemberEditor.aspx" />
+    <Content Include="BackAdmin\tryencryption.aspx" />
+    <Content Include="MemberEditor.aspx" />
     <Content Include="BackAdmin\MemberFollowEditor.aspx" />
-    <Content Include="BackAdmin\WebForm1.aspx" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
     <Content Include="bin\MKForum.dll" />
@@ -123,8 +123,11 @@
     <Content Include="Login.aspx" />
     <Content Include="MemberFollowList.aspx" />
     <Content Include="MemberList.aspx" />
+    <Content Include="MemberRegister.aspx" />
     <Content Include="MemberStatus.aspx" />
     <Content Include="PboardtoCboard.aspx" />
+    <Content Include="PicPath\C20220323_161153_441143_67730.png" />
+    <Content Include="PicPath\線條人.png" />
     <Content Include="Ranking.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Scripts\showdown.js" />
@@ -138,11 +141,19 @@
     <Compile Include="API\MugenHandler.ashx.cs">
       <DependentUpon>MugenHandler.ashx</DependentUpon>
     </Compile>
-    <Compile Include="BackAdmin\MemberEditor.aspx.cs">
+    <Compile Include="BackAdmin\tryencryption.aspx.cs">
+      <DependentUpon>tryencryption.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BackAdmin\tryencryption.aspx.designer.cs">
+      <DependentUpon>tryencryption.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\EncryptionHelper.cs" />
+    <Compile Include="MemberEditor.aspx.cs">
       <DependentUpon>MemberEditor.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="BackAdmin\MemberEditor.aspx.designer.cs">
+    <Compile Include="MemberEditor.aspx.designer.cs">
       <DependentUpon>MemberEditor.aspx</DependentUpon>
     </Compile>
     <Compile Include="BackAdmin\MemberFollowEditor.aspx.cs">
@@ -247,6 +258,13 @@
     <Compile Include="MemberList.aspx.designer.cs">
       <DependentUpon>MemberList.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MemberRegister.aspx.cs">
+      <DependentUpon>MemberRegister.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MemberRegister.aspx.designer.cs">
+      <DependentUpon>MemberRegister.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MemberStatus.aspx.cs">
       <DependentUpon>MemberStatus.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -269,6 +287,7 @@
     <Compile Include="Models\PostHashtag.cs" />
     <Compile Include="Models\PostImgList.cs" />
     <Compile Include="Models\PostStamp.cs" />
+    <Compile Include="Models\RankingDATA.cs" />
     <Compile Include="Models\SearchResult.cs" />
     <Compile Include="PboardtoCboard.aspx.cs">
       <DependentUpon>PboardtoCboard.aspx</DependentUpon>
