更新search基底 未完成

--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -129,6 +129,7 @@
     <Content Include="Register.aspx" />
     <Content Include="Scripts\showdown.js" />
     <Content Include="Scripts\showdown.min.js" />
+    <Content Include="SearchKekka.aspx" />
     <Content Include="SearchPage.aspx" />
     <Content Include="ShareControls\Mugen.ascx" />
     <Content Include="Web.config" />
@@ -301,6 +302,13 @@
     </Compile>
     <Compile Include="DisplayPost.aspx.designer.cs">
       <DependentUpon>DisplayPost.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SearchKekka.aspx.cs">
+      <DependentUpon>SearchKekka.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SearchKekka.aspx.designer.cs">
+      <DependentUpon>SearchKekka.aspx</DependentUpon>
     </Compile>
     <Compile Include="SearchPage.aspx.cs">
       <DependentUpon>SearchPage.aspx</DependentUpon>
