--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -110,6 +110,7 @@
     <Content Include="css\index.css" />
     <Content Include="css\PboardtoCboard.css" />
     <Content Include="css\pen.png" />
+    <Content Include="css\SearchPage.css" />
     <Content Include="EditPost.aspx" />
     <Content Include="Global.asax" />
     <Content Include="HomePage.aspx" />
