修復 cP 新增上傳檔案限制 及上船大小限制

--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,7 @@
     <compilation debug="true" targetFramework="4.8" />
 	  <authentication mode="Forms"></authentication>
     <!--<httpRuntime targetFramework="4.8" />-->
+	  <httpRuntime  maxRequestLength="20480" executionTimeout="600"/>
   </system.web>
   <system.codedom>
     <compilers>
@@ -20,4 +21,7 @@
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
+	<appSettings>
+		<add key="FileSizeLimit" value="20480"/>
+	</appSettings>
 </configuration>
