--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -113,6 +113,7 @@
     <Content Include="css\pen.png" />
     <Content Include="css\SearchPage.css" />
     <Content Include="EditPost.aspx" />
+    <Content Include="ErrorPage.aspx" />
     <Content Include="Global.asax" />
     <Content Include="HomePage.aspx" />
     <Content Include="images\fire-15.gif" />
@@ -194,6 +195,13 @@
     </Compile>
     <Compile Include="EditPost.aspx.designer.cs">
       <DependentUpon>EditPost.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorPage.aspx.cs">
+      <DependentUpon>ErrorPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ErrorPage.aspx.designer.cs">
+      <DependentUpon>ErrorPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
