--- a/Web.config
+++ b/Web.config
@@ -14,6 +14,8 @@
 	  <authentication mode="Forms"></authentication>
     <!--<httpRuntime targetFramework="4.8" />-->
 	  <httpRuntime  maxRequestLength="20480" executionTimeout="600"/>
+	  <customErrors defaultRedirect="~/ErrorPage.aspx" mode="On">
+	  </customErrors>
   </system.web>
   <system.codedom>
     <compilers>
