--- a/MKForum.csproj
+++ b/MKForum.csproj
@@ -114,6 +114,50 @@
     <Content Include="css\SearchPage.css" />
     <Content Include="EditPost.aspx" />
     <Content Include="ErrorPage.aspx" />
+    <Content Include="FileDownload\PostContent\C20220331_152850_005929_41958.gif" />
+    <Content Include="FileDownload\PostContent\C20220403_151213_946898_14286.jpg" />
+    <Content Include="FileDownload\PostContent\C20220403_151436_49544_50621.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141249_903321_35039.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141320_130003_80269.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141459_035719_31003.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141522_333261_70605.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141558_562749_80507.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141627_905944_99863.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141652_340549_53408.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_141753_119454_21682.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_142604_72059_10828.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_142622_418883_30751.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_142723_927835_09281.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_142758_817565_57535.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_142823_191724_78963.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_143114_901102_01959.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_143424_875159_11541.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_143853_035468_12540.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_144227_023629_66918.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_144454_457883_48927.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_144918_106211_25948.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_145401_012177_50255.png" />
+    <Content Include="FileDownload\PostContent\C20220404_145630_281931_84105.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_145818_264027_36027.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_145950_455753_28294.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_150113_801744_41471.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_150145_934691_92802.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_150401_909529_52283.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_150410_342865_13988.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_150452_969947_73047.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_151309_814286_19277.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_151524_615685_45809.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_151648_627221_85265.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_152011_092613_97655.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_152304_022254_84117.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_152307_855893_90937.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_152523_57713_29528.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_152738_904363_06319.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_153119_186641_81134.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_153337_998282_48153.jpeg" />
+    <Content Include="FileDownload\PostContent\C20220404_154101_703771_60039.jpg" />
+    <Content Include="FileDownload\PostContent\C20220404_154243_219681_78609.jpeg" />
+    <Content Include="FileDownload\PostContent\mokunin.jpg" />
     <Content Include="Global.asax" />
     <Content Include="HomePage.aspx" />
     <Content Include="images\fire-15.gif" />
@@ -132,6 +176,28 @@
     <Content Include="MemberRegister.aspx" />
     <Content Include="MemberStatus.aspx" />
     <Content Include="PboardtoCboard.aspx" />
+    <Content Include="PicPath\C20220323_161153_441143_67730.png" />
+    <Content Include="PicPath\C20220323_170322_158347_34960.png" />
+    <Content Include="PicPath\C20220327_230207_06728_22410.jpg" />
+    <Content Include="PicPath\C20220327_230218_314496_17614.jpg" />
+    <Content Include="PicPath\C20220327_230626_104566_00331.png" />
+    <Content Include="PicPath\C20220330_194417_26911_58642.png" />
+    <Content Include="PicPath\C20220403_145900_191654_17102.png" />
+    <Content Include="PicPath\C20220403_150056_324772_16990.bmp" />
+    <Content Include="PicPath\C20220403_150139_28953_58567.bmp" />
+    <Content Include="PicPath\C20220403_150307_631835_66800.bmp" />
+    <Content Include="PicPath\C20220403_150350_316811_30453.bmp" />
+    <Content Include="PicPath\C20220403_150525_001096_13624.bmp" />
+    <Content Include="PicPath\C20220403_150624_28591_98787.bmp" />
+    <Content Include="PicPath\C20220403_150743_530422_80635.jpg" />
+    <Content Include="PicPath\C20220403_150847_059778_16587.jpg" />
+    <Content Include="PicPath\C20220403_151107_483816_00518.bmp" />
+    <Content Include="PicPath\C20220403_151436_49544_50621.jpg" />
+    <Content Include="PicPath\C20220403_151529_396827_39561.jpg" />
+    <Content Include="PicPath\C20220403_151630_916848_35228.png" />
+    <Content Include="PicPath\C20220403_151744_298343_43305.jpg" />
+    <Content Include="PicPath\C20220404_113255_182958_69896.bmp" />
+    <Content Include="PicPath\線條人.png" />
     <Content Include="Ranking.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Scripts\showdown.js" />
